[workspace]
resolver = "2"
members = ["tools/ears-eraser"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NickAcPT"]
homepage = ""
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ears-rs = { git = "https://github.com/NickAcPT/ears-rs" }

image = { version = "0.24", features = ["png"], default-features = false }

thiserror = "1"

wasm-bindgen = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

lol_alloc = "0.4.0"

[profile.release]
opt-level = 3
codegen-units = 1

strip = true
lto = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true
