[workspace]
resolver = "2"
members = ["tools/js-utils", "tools/ears-eraser", "tools/bbmodel-generator", "tools/skin-renderer", "tools/alfalfa-inspector"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NickAcPT"]
homepage = "https://ears.nickac.dev/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NickAcPT/ears-tools-rs"

[workspace.dependencies]
ears-rs = { git = "https://github.com/NickAcPT/ears-rs" }

image = { version = "0.24", features = ["png"], default-features = false }

thiserror = "1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = "0.3"
js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

lol_alloc = "0.4"
console_error_panic_hook = "0.1"

js-utils = { path = "tools/js-utils" }

[profile.release]
opt-level = 3
codegen-units = 1
strip = false
lto = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = false