[package]
name = "alfalfa-inspector"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ears-rs = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-utils = { workspace = true }
wasm-bindgen-futures = { workspace = true }
image = { version = "0", default-features = false, features = ["png"] }
serde_bytes = { workspace = true }
lol_alloc = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-c",
    "-lmu",
    "--roundtrip",
    "-Oz",
    "--dce",
    "--duplicate-import-elimination",
    "--duplicate-function-elimination",
    "--generate-global-effects",
    "--memory-packing",
    "--directize",
    "--limit-segments",
    "--once-reduction",
    "--monomorphize",
    "--const-hoisting",
    "--abstract-type-refining",
    "--optimize-added-constants-propagate",
    "--optimize-instructions",
    "--type-ssa",
    "--strip-eh",
    "--strip-debug",
    "--strip-dwarf",
    "--strip-producers",
    "--signature-pruning",
    "--rse",
    "--gto",
    "--remove-unused-names",
    "--remove-unused-types",
    "--remove-unused-module-elements",
    "--remove-unused-nonfunction-module-elements",
    "--remove-unused-brs",
    "--vacuum",
    "--merge-similar-functions",
    "--local-cse",
    "--gufa-optimizing",
    "-tnh",
    "-uim",
    "--dae-optimizing",
    "--code-pushing",
    "--merge-locals",
    "--coalesce-locals-learning",
    "--untee",
    "--type-merging",
    "--simplify-locals-notee",
    "--simplify-locals-nostructure",
    "--simplify-locals-notee-nostructure",
    "--simplify-globals-optimizing",
    "--precompute",
    "--precompute-propagate",
    "--multi-memory-lowering",
    "--merge-blocks",
    "--licm",
    "--inlining-optimizing",
    "--code-folding",
    "-cw",
    "-ifwl",
    "--optimize-stack-ir",
    "--ssa",
    "--optimize-for-js",
    "--tuple-optimization",
    "--unsubtyping",
    "--cfp",
    "--reorder-locals",
    "--simplify-locals",
    "-O4",
    "--vacuum",
    "--enable-nontrapping-float-to-int",
    "-ffm",
]
