[package]
name = "bbmodel-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lol_alloc = { workspace = true }
wasm-bindgen = { workspace = true }
js-utils = { workspace = true }
nmsr-rendering-blockbench-model-generator-experiment = { git = "https://github.com/NickAcPT/nmsr-rs", features = [
    "ears",
    "wasm",
] }
web-sys = { workspace = true, features = ["Window", "console"]}

# This is here because some crate depends on it
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-c",
    "--roundtrip",
    "-Oz",
    "--dce",
    "--duplicate-import-elimination",
    "--duplicate-function-elimination",
    "--generate-global-effects",
    "--memory-packing",
    "--directize",
    "--limit-segments",
    "--once-reduction",
    "--monomorphize",
    "--const-hoisting",
    "--abstract-type-refining",
    "--optimize-added-constants-propagate",
    "--optimize-instructions",
    "--type-ssa",
    "--strip-eh",
    "--strip-debug",
    "--strip-dwarf",
    "--strip-producers",
    "--signature-pruning",
    "--rse",
    "--gto",
    "--remove-unused-names",
    "--remove-unused-types",
    "--remove-unused-module-elements",
    "--remove-unused-nonfunction-module-elements",
    "--remove-unused-brs",
    "--vacuum",
    "--merge-similar-functions",
    "--local-cse",
    "--gufa-optimizing",
    "-tnh",
    "-uim",
    "-iit",
    "--dae-optimizing",
    "--code-pushing",
    "--merge-locals",
    "--coalesce-locals-learning",
    "--avoid-reinterprets",
    "--untee",
    "--type-merging",
    "--simplify-locals-notee",
    "--simplify-locals-nostructure",
    "--simplify-locals-notee-nostructure",
    "--simplify-globals-optimizing",
    "--precompute",
    "--precompute-propagate",
    "--optimize-casts",
    "--multi-memory-lowering",
    "--merge-blocks",
    "--licm",
    "--inlining-optimizing",
    "--code-folding",
    "-cw",
    "-ifwl",
    "--optimize-stack-ir",
    "-lmu",
    "--ssa",
    "--optimize-for-js",
    "--tuple-optimization",
    "--unsubtyping",
    "--cfp",
    "--reorder-locals",
    "--simplify-locals",
    "--gufa-cast-all",
    "-O4",
    "--vacuum",
    "-Oz",
]
