[package]
name = "ears-manipulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ears-rs = { workspace = true }
nmsr-player-parts = { workspace = true, features = ["ears"]}
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_repr = "0.1"
serde-wasm-bindgen = { workspace = true }
js-utils = { workspace = true }
wasm-bindgen-futures =  { workspace = true }
image = { workspace = true, default-features = false, features = ["png"] }
serde_bytes = "0"
glam = "0.28"

# Dependencies for template generation
hsl = "0"
rand = "0.8"
strum = { version = "0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.12.1"

[features]
default = []
template = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-g", "--roundtrip"]
