[package]
name = "ears-manipulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ears-rs = { workspace = true }
nmsr-player-parts = { workspace = true, features = ["ears"]}
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-utils = { workspace = true }
wasm-bindgen-futures =  { workspace = true }
image = { workspace = true, default-features = false, features = ["png"] }
serde_bytes = { workspace = true }
glam = { workspace = true }

# Dependencies for template generation
hsl = { workspace = true }
rand = { workspace = true }
strum = { workspace = true, features = ["derive"] }
getrandom = { workspace = true, features = ["wasm_js"] }
itertools = { workspace = true }

[features]
default = ["template"]
template = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-g", "--roundtrip"]
