[package]
name = "skin-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ears-rs = { git = "https://github.com/NickAcPT/ears-rs" }
console_error_panic_hook = "*"
wasm-bindgen = { workspace = true }
nmsr-rendering = { git = "https://github.com/NickAcPT/nmsr-rs", default-features = false, optional = true }
nmsr-rasterizer-test = { path = "../../../nmsr-rasterizer-test", optional = true }
nmsr-player-parts = { git = "https://github.com/NickAcPT/nmsr-rs" }
# web-sys has to be locked to 0.3.64 because otherwise, wgpu breaks
web-sys = { version = "=0.3.64", features = ["HtmlCanvasElement"] }
# We're being spicy here by asking it to be send and sync..
wgpu = { version = "^0.18", features = ["fragile-send-sync-non-atomic-wasm"] }
winit = "0.29"
js-utils = { workspace = true }
wasm-bindgen-futures = "0.4.38"
send_wrapper = "0.6.0"
image = { version = "0", default-features = false, features = ["png"] }
glam = "0.24"

[features]
default = ["ears", "software-rendering", "nmsr-rendering?/ears", "nmsr-rasterizer-test?/ears"]
webgl = ["dep:nmsr-rendering", "wgpu/webgl", "nmsr-rendering/pipeline"]
webgpu = ["dep:nmsr-rendering", "nmsr-rendering/pipeline"]
software-rendering = ["dep:nmsr-rasterizer-test", "web-sys/CanvasRenderingContext2d", "web-sys/ImageData"]
ears = ["nmsr-rendering?/ears", "nmsr-player-parts/ears"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-c",
    "--roundtrip",
    "-Oz",
    "--dce",
    "--duplicate-import-elimination",
    "--duplicate-function-elimination",
    "--generate-global-effects",
    "--memory-packing",
    "--directize",
    "--limit-segments",
    "--once-reduction",
    "--monomorphize",
    "--const-hoisting",
    "--abstract-type-refining",
    "--optimize-added-constants-propagate",
    "--optimize-instructions",
    "--type-ssa",
    "--strip-eh",
    "--strip-debug",
    "--strip-dwarf",
    "--strip-producers",
    "--signature-pruning",
    "--rse",
    "--gto",
    "--remove-unused-names",
    "--remove-unused-types",
    "--remove-unused-module-elements",
    "--remove-unused-nonfunction-module-elements",
    "--remove-unused-brs",
    "--vacuum",
    "--merge-similar-functions",
    "--local-cse",
    "--gufa-optimizing",
    "-tnh",
    "-uim",
    "-iit",
    "--dae-optimizing",
    "--code-pushing",
    "--merge-locals",
    "--coalesce-locals-learning",
    "--avoid-reinterprets",
    "--untee",
    "--type-merging",
    "--simplify-locals-notee",
    "--simplify-locals-nostructure",
    "--simplify-locals-notee-nostructure",
    "--simplify-globals-optimizing",
    "--precompute",
    "--precompute-propagate",
    "--optimize-casts",
    "--multi-memory-lowering",
    "--merge-blocks",
    "--licm",
    "--inlining-optimizing",
    "--code-folding",
    "-cw",
    "-ifwl",
    "--optimize-stack-ir",
    "-lmu",
    "--ssa",
    "--optimize-for-js",
    "--tuple-optimization",
    "--unsubtyping",
    "--cfp",
    "--reorder-locals",
    "--simplify-locals",
    "--gufa-cast-all",
    "-O4",
    "--vacuum",
]
